# obsidian-copilot-cli

./: .gitignore  AGENTS.md  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  setup.js  versions.json
.agents/skills/: deploy.md
.github/copilot/skills/: deploy-to-obsidian.md
.github/workflows/: release.yml
conpty-bridge/: Cargo.toml
conpty-bridge/src/: conpty.rs  main.rs  pipe_relay.rs
src/: ContextProvider.ts  ContextWriter.ts  CopilotSettingTab.ts  CopilotView.ts  IdeServer.ts  McpRegistrar.ts  constants.ts  main.ts  pty-relay.js  resolveCopilot.ts  styles.css
src/mcp-server/: index.ts
