[package]
name = "conpty-bridge"
version = "0.1.0"
edition = "2021"
description = "ConPTY bridge for obsidian-copilot (Windows)"
license = "MIT"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_Storage_FileSystem",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
